--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@canvasjs/angular-charts": "^1.1.1",
+    "apexcharts": "^3.45.2",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "firebase": "^10.4.0",
     "firebase-tools": "^12.6.1",
+    "ng-apexcharts": "^1.8.0",
+    "ng2-charts": "^5.0.4",
+    "ngx-apexcharts": "^0.4.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
